--- a/src/adjoint/Makefile.am
+++ b/src/adjoint/Makefile.am
@@ -6,9 +6,9 @@
 
 noinst_LIBRARIES = libadjoint.a
 
-libadjoint_a_SOURCES = dual_solver.C calc_jacobain.C adjoint_init.C \
+libadjoint_a_SOURCES = dual_solver.C compute_jacobian_elem.C calc_jacobain.C adjoint_init.C \
                        residual.C calc_adjoint.C uniform_refine.C bilinear_interp.C \
-                       error_compute.C debug_flux.C adjoint_test.C
+                       error_compute.C debug_flux.C adjoint_test.C 
 
 
 
