refactoring dual_solver and adding new files to make it more readable, this is unstable version

--- a/src/adjoint/Makefile.am
+++ b/src/adjoint/Makefile.am
@@ -8,7 +8,9 @@ noinst_LIBRARIES = libadjoint.a
 
 libadjoint_a_SOURCES = dual_solver.C compute_jacobian_elem.C calc_jacobain.C adjoint_init.C \
                        residual.C calc_adjoint.C uniform_refine.C bilinear_interp.C \
-                       error_compute.C debug_flux.C adjoint_test.C 
+                       error_compute.C adjoint_test.C debug_routines.C error_grid_routines.C\
+                       dual_grid_routines.C dual_refine_unrefine.C dual_repartition.C 
+                       
 
 
 
