wrtting files with hdf5

--- a/src/tecplot/Makefile.am
+++ b/src/tecplot/Makefile.am
@@ -9,7 +9,7 @@ noinst_LIBRARIES = libtecplot.a
 libtecplot_a_SOURCES = outsum.C tecplot.C grassout.C
 
 if HAVE_HDF5
-   libtecplot_a_SOURCES += xdfm_write.C GMFG_hdfconstants.h hd5calls.c
+   libtecplot_a_SOURCES += xdfm_write.C GMFG_hdfconstants.h hd5calls.C
 endif
 
 INCLUDES=-I../header/
