--- a/src/header/Makefile.am
+++ b/src/header/Makefile.am
@@ -4,6 +4,6 @@
 # $Id: Makefile.am 129 2007-06-07 19:54:28Z dkumar $
 #
 
-noinst_HEADERS = blas.h constant.h extfun.h geoflow.h hpfem.h properties.h \
-    refined_neighbor_info.h struct.h boundary.h element2.h jacobian.h dualmesh.h exvar.h \
-    hashtab.h node.h recv.h scale.h flux_srcs.h GMFG_hdfapi.h matrix.h adjoint.h
+noinst_HEADERS = blas.h constant.h extfun.h  hashtab.h node.h element2.h properties.h \
+	geoflow.h refined_neighbor_info.h struct.h exvar.h recv.h scale.h flux_srcs.h \
+    GMFG_hdfapi.h dualmesh.h matrix.h jacobian.h adjoint.h hpfem.h
